fix: spacing on lang selector, burger menu lines and invertory column gaps

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -61,3 +61,7 @@
   .checkbox:hover {
     color: inherit;
   }
+
+  .router-link-active {
+    
+  }
